@@ -1,7 +1,7 @@
 Package: UCell
 Type: Package
 Title: Rank-based signature enrichment analysis for single-cell data
-Version: 2.7.5
+Version: 2.7.6
 Authors@R: c(
   person('Massimo', 'Andreatta', 
      email = 'massimo.andreatta@unil.ch',
